[gd_scene load_steps=4 format=3 uid="uid://sv2q6n3f5gte"]

[ext_resource type="Script" path="res://Scoreboard.gd" id="1_kgmov"]

[sub_resource type="LabelSettings" id="LabelSettings_alfn0"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_kwt10"]
font_size = 50

[node name="Scoreboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kgmov")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_top = 480.0
offset_right = 256.0
offset_bottom = 608.0
text = "Update"

[node name="Button2" type="Button" parent="."]
offset_left = 896.0
offset_top = 480.0
offset_right = 1152.0
offset_bottom = 608.0
text = "Reset"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 653.0
offset_bottom = 184.0
text = "Modify points (add/sub):"
label_settings = SubResource("LabelSettings_alfn0")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 144.0
offset_right = 1088.0
offset_bottom = 448.0
text = "0"
label_settings = SubResource("LabelSettings_kwt10")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 704.0
offset_top = 48.0
offset_right = 1088.0
offset_bottom = 144.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
